Remove the vertical-align property since it has no longer effect

--- a/res/css/structures/_ToastContainer.scss
+++ b/res/css/structures/_ToastContainer.scss
@@ -120,7 +120,6 @@ limitations under the License.
                 font-weight: 600;
                 display: inline;
                 width: auto;
-                vertical-align: middle;
             }
 
             .mx_Toast_title_countIndicator {
